# noqlen-forge-core

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SUPPORT.md  config.example.toml  mkdocs.yml  pyproject.toml  pytest.ini
.github/workflows/: ci.yml  (+1 more)
docs/: README.md  configuration.md
docs_site/: index.md
noqlen_forge/: __init__.py  analyze.py  api.py  audio.py  audio_key.py  audit.py  batch.py  cache.py  cleanup.py  cli.py  config.py  cover.py  cover_providers.py  db.py  dev.py  duplicates.py  export.py  fields.py  importer.py  jobs.py  lab.py  lab_assertions.py  lab_context.py  lab_registry.py  lab_runner.py  lastfm.py  lastfm_filter.py  lyrics.py  lyrics_providers.py  metadata_providers.py  mood.py  musicbrainz.py  navidrome.py  organize.py  output.py  provider_common.py  repair.py  replaygain.py  reports.py  review.py  (+8 more)
scripts/: check-full  check-quick
tests/: conftest.py  helpers.py  test_analyze.py  test_audio.py  test_audio_key.py  test_audit.py  test_batch.py  test_cleanup.py  test_cli_status.py  test_cli_ux.py  test_config.py  test_core_api.py  test_cover.py  test_db.py  test_dependency_guard.py  test_dev.py  test_duplicates.py  test_export.py  test_fields.py  test_helpers.py  test_importer.py  test_integrations.py  test_jobs.py  test_lab.py  test_lab_registry.py  test_lastfm.py  test_lastfm_filter.py  test_lyrics.py  test_metadata_providers.py  test_mood.py  test_musicbrainz.py  test_navidrome.py  test_organize.py  test_provider_architecture.py  test_repair.py  test_replaygain.py  test_reports.py  test_review.py  test_rewrite.py  test_safety.py  (+7 more)
(+54 files in other folders)
